# thor

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  bootstrap  check.sh  config_HDB16_high_efficiency.txt  config_HDB16_low_complexity.txt  config_HDB16_medium_complexity.txt  config_HDB16_qm_high_efficiency.txt  config_HDB16_qm_low_complexity.txt  config_HDB16_qm_medium_complexity.txt  config_HDB_high_efficiency.txt  config_HDB_low_complexity.txt  config_HDB_medium_complexity.txt  config_HDB_qm_high_efficiency.txt  config_HDB_qm_low_complexity.txt  config_HDB_qm_medium_complexity.txt  config_LDB_high_efficiency.txt  config_LDB_low_complexity.txt  config_LDB_medium_complexity.txt  config_LDB_qm_high_efficiency.txt  config_LDB_qm_low_complexity.txt  config_LDB_qm_medium_complexity.txt  config_RA16_high_efficiency.txt  config_RA16_low_complexity.txt  config_RA16_medium_complexity.txt  config_RA_high_efficiency.txt  config_RA_low_complexity.txt  config_RA_medium_complexity.txt  config_RA_qm_high_efficiency.txt  config_RA_qm_low_complexity.txt  config_RA_qm_medium_complexity.txt  config_high_efficiency.txt  config_low_complexity.txt  configure.ac  thor.man
common/: chroma.c  chroma.h  common_block.c  common_block.h  common_block_hbd.c  common_frame.c  common_frame.h  common_frame_hbd.c  common_kernels.c  common_kernels.h  common_kernels_gen.c  common_kernels_hbd.c  common_tables.c  entcode.c  entcode.h  global.h  inter_prediction.c  inter_prediction.h  inter_prediction_hbd.c  intra_prediction.c  intra_prediction.h  intra_prediction_hbd.c  odintrin.h  simd.c  simd.h  snr.c  snr.h  snr_hbd.c  temporal_interp.c  temporal_interp.h  temporal_interp_hbd.c  transform.c  transform.h  types.h  wt_matrix.c  wt_matrix.h
dec/: decode_block.c  decode_block.h  decode_block_hbd.c  decode_frame.c  decode_frame.h  entdec.c  entdec.h  getbits.c  getbits.h  getvlc.c  getvlc.h  maindec.c  maindec.h  read_bits.c  read_bits.h
enc/: enc_kernels.c  enc_kernels.h  enc_kernels_gen.c  enc_kernels_hbd.c  encode_block.c  encode_block.h  encode_block_hbd.c  encode_config.c  encode_config.h  encode_frame.c  encode_frame.h  encode_frame_hbd.c  encode_tables.c  entenc.c  entenc.h  mainenc.c  mainenc.h  putbits.c  putbits.h  putvlc.c  putvlc.h  rc.c  rc.h  strings.c  write_bits.c  write_bits.h
scripts/: lbd_to_hbd.sh
(+35 files in other folders)
