AC_PREREQ([2.69])
AC_INIT([thorcodec], [0.0.1], [Cisco Systems])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_MACRO_DIR([m4])

AC_USE_SYSTEM_EXTENSIONS

AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
LT_INIT

AX_EXT

AC_CHECK_LIB(m,[sqrt,log10],[LIBM="-lm"])
AC_SUBST(LIBM)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
